--- a/VeroExpressLibrary/package.json
+++ b/VeroExpressLibrary/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "Lib:build": "ng build verosxpress"
+    "VeroExpressBuild": "ng build Veroexpress"
   },
   "private": true,
   "dependencies": {
